[package]
name = "polars-tokenize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "polars_tokenize"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.1"
polars = { version = "*", features = ["dtype-struct"] }
pyo3-polars = "*"
# tokenizers-python = { git = "https://github.com/huggingface/tokenizers" }
serde_arrow = { version = "0.7.1", features = ["arrow2-0-17"] }
arrow2 = "0.17.3"
serde = { version = "1.0.174", features = ["derive"] }
error-chain = "0.12.4"
tokenizers = "0.13.3"
polars-core = "0.30"
rayon = "1.7.0"
itertools = "0.11.0"
